cleanup files, correct names and remove icon related stuff

--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -4,7 +4,6 @@
 //  * ************************* *
 //
 
-@use "base/reset";
-@use "base/font-face";
-@use "utils/utils";
+@use 'base/base';
+@use 'utils/utils';
 // @use 'parts/parts';
