--- a/src/sass/config/_fonts.scss
+++ b/src/sass/config/_fonts.scss
@@ -1,8 +1,8 @@
-$fonts-path: "../../fonts/" !default; // Public fonts directory
+$fonts-path: '../../fonts/' !default; // Public fonts directory
 $used-fonts: () !default;
 
 // Available fonts declaration. Map format :
-// fonts.$fonts-stack: (
+// $fonts-stack: (
 //      group: (
 //          variant: (
 //              family: "font-family-name",
@@ -19,109 +19,15 @@ $used-fonts: () !default;
 // );
 
 $fonts-stack: (
-  roc: (
-    regular: (
-      family: "roc_groteskregular",
-      stack: (
-        Helvetica,
-        Arial,
-        sans-serif,
-      ),
-      weight: normal,
-      style: normal,
-      file: "roc_grotesk_regular-webfont",
-      formats: (
-        woff,
-        woff2,
-      ),
+    inter: (
+        variant: (
+            family: 'Inter',
+            stack: (
+                Helvetica,
+                Arial,
+                sans-serif,
+            ),
+            weight: normal,
+        ),
     ),
-    bold: (
-      family: "roc_groteskbold",
-      stack: (
-        Helvetica,
-        Arial,
-        sans-serif,
-      ),
-      weight: normal,
-      style: normal,
-      file: "roc_grotesk_bold-webfont",
-      formats: (
-        woff,
-        woff2,
-      ),
-    ),
-    condensed: (
-      family: "roc_groteskcondensed",
-      stack: (
-        Helvetica,
-        Arial,
-        sans-serif,
-      ),
-      weight: normal,
-      style: normal,
-      file: "roc_grotesk_condensed_bold-webfont",
-      formats: (
-        woff,
-        woff2,
-      ),
-    ),
-  ),
-  instrument: (
-    regular: (
-      family: "instrument_serifregular",
-      stack: (
-        Helvetica,
-        Arial,
-        sans-serif,
-      ),
-      weight: normal,
-      style: normal,
-      file: "instrumentserif-regular-webfont",
-      formats: (
-        woff,
-        woff2,
-      ),
-    ),
-    italic: (
-      family: "instrument_serifitalic",
-      stack: (
-        Helvetica,
-        Arial,
-        sans-serif,
-      ),
-      weight: normal,
-      style: normal,
-      file: "instrumentserif-italic-webfont",
-      formats: (
-        woff,
-        woff2,
-      ),
-    ),
-  ),
-  jv: (
-    regular: (
-      family: "jv_signatureregular",
-      stack: (
-        Helvetica,
-        Arial,
-        sans-serif,
-      ),
-      weight: normal,
-      style: normal,
-      file: "fontsfree-net-jv-signature-regular-webfont",
-      formats: (
-        woff,
-        woff2,
-      ),
-    ),
-  ),
-  icons: (
-    font: (
-      family: "iconfont",
-      weight: normal,
-      file: "iconfont",
-      style: normal,
-      bust: true,
-    ),
-  ),
 ) !default;
