run prettier command to format everything

--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -4,6 +4,6 @@
 //  * ************************* *
 //
 
-@use 'base/base';
-@use 'utils/utils';
+@use "base/base";
+@use "utils/utils";
 // @use 'parts/parts';
