--- a/src/sass/tools/_tools.scss
+++ b/src/sass/tools/_tools.scss
@@ -1,45 +1,45 @@
 /*
 * Functions
 */
-@forward 'functions/col';
-@forward 'functions/colGut';
-@forward 'functions/color';
-@forward 'functions/em';
-@forward 'functions/fixedCol';
-@forward 'functions/fixedGut';
-@forward 'functions/font-size-unitless';
-@forward 'functions/gutter';
-@forward 'functions/map-deep-get';
-@forward 'functions/px';
-@forward 'functions/rem';
-@forward 'functions/rmUnit';
-@forward 'functions/str-replace';
+@forward "functions/col";
+@forward "functions/colGut";
+@forward "functions/color";
+@forward "functions/em";
+@forward "functions/fixedCol";
+@forward "functions/fixedGut";
+@forward "functions/font-size-unitless";
+@forward "functions/gutter";
+@forward "functions/map-deep-get";
+@forward "functions/px";
+@forward "functions/rem";
+@forward "functions/rmUnit";
+@forward "functions/str-replace";
 
 /*
 * Mixins
 */
-@forward 'mixins/clearfix';
-@forward 'mixins/clickableTransparentBg';
-@forward 'mixins/cover';
-@forward 'mixins/font-face';
-@forward 'mixins/font';
-@forward 'mixins/grid';
-@forward 'mixins/hidden';
-@forward 'mixins/import-fonts';
-@forward 'mixins/obj-fit-contain';
-@forward 'mixins/obj-fit-cover';
-@forward 'mixins/resetFW';
-@forward 'mixins/respVideoContainer';
-@forward 'mixins/track-fonts';
-@forward 'mixins/triangle';
-@forward 'mixins/visible';
+@forward "mixins/clearfix";
+@forward "mixins/clickableTransparentBg";
+@forward "mixins/cover";
+@forward "mixins/font-face";
+@forward "mixins/font";
+@forward "mixins/grid";
+@forward "mixins/hidden";
+@forward "mixins/import-fonts";
+@forward "mixins/obj-fit-contain";
+@forward "mixins/obj-fit-cover";
+@forward "mixins/resetFW";
+@forward "mixins/respVideoContainer";
+@forward "mixins/track-fonts";
+@forward "mixins/triangle";
+@forward "mixins/visible";
 
 /*
 * Libs
 */
-@forward '../lib/mq';
-@forward '../lib/decimals';
-@forward '../lib/easing';
+@forward "../lib/mq";
+@forward "../lib/decimals";
+@forward "../lib/easing";
 
 /*
 * Custom
