--- a/src/sass/tools/functions/_gutter.scss
+++ b/src/sass/tools/functions/_gutter.scss
@@ -4,14 +4,14 @@
 // of parent-columns
 // **********************************************************
 
-@use 'sass:math';
-@use 'fixedCol' as *;
-@use '../../config/grid';
+@use "sass:math";
+@use "fixedCol" as *;
+@use "../../config/grid";
 
 @function gutter($parent) {
-    @if $parent == 0 {
-        @return 0;
-    }
+  @if $parent == 0 {
+    @return 0;
+  }
 
-    @return math.percentage(math.div(grid.$gutter_size, fixedCol($parent)));
+  @return math.percentage(math.div(grid.$gutter_size, fixedCol($parent)));
 }
