--- a/src/sass/tools/mixins/_obj-fit-cover.scss
+++ b/src/sass/tools/mixins/_obj-fit-cover.scss
@@ -9,6 +9,6 @@
  */
 
 @mixin obj-fit-cover() {
-    object-fit: cover;
-    font-family: 'object-fit: cover';
+  object-fit: cover;
+  font-family: "object-fit: cover";
 }
