--- a/tests/sass/tools/functions/_col.scss
+++ b/tests/sass/tools/functions/_col.scss
@@ -2,12 +2,12 @@
 // **********************************************************
 // returns box size in %
 // **********************************************************
-@use 'sass:math';
-@use 'fixedCol' as *;
+@use "sass:math";
+@use "fixedCol" as *;
 
 @function col($col, $parent) {
-    @if $col == 0 {
-        @return 0;
-    }
-    @return math.percentage(math.div(fixedCol($col), fixedCol($parent)));
+  @if $col == 0 {
+    @return 0;
+  }
+  @return math.percentage(math.div(fixedCol($col), fixedCol($parent)));
 }
