--- a/tests/sass/tools/functions/_px.scss
+++ b/tests/sass/tools/functions/_px.scss
@@ -1,5 +1,5 @@
-@use '../../../../src/sass/tools/functions/px' as *;
+@use "../../../../src/sass/tools/functions/px" as *;
 
 .px {
-    font-size: px(xl);
+  font-size: px(xl);
 }
