--- a/tests/sass/tools/mixins/_obj-fit-cover.scss
+++ b/tests/sass/tools/mixins/_obj-fit-cover.scss
@@ -1,5 +1,5 @@
-@use '../../../../src/sass/tools/mixins/obj-fit-cover' as *;
+@use "../../../../src/sass/tools/mixins/obj-fit-cover" as *;
 
 .obj-fit-cover {
-    @include obj-fit-cover();
+  @include obj-fit-cover();
 }
