--- a/src/sass/lib/_decimals.scss
+++ b/src/sass/lib/_decimals.scss
@@ -14,39 +14,39 @@
 //     decimal-round(0.666, 1) => 0.7
 //     decimal-round(0.666, 2) => 0.67
 //
-@use 'sass:math';
-@use 'sass:meta';
+@use "sass:math";
+@use "sass:meta";
 
 @function decimal-round($number, $digits: 0, $mode: round) {
-    $n: 1;
-    // $number must be a number
-    @if meta.type-of($number) != number {
-        @warn '#{ $number } is not a number.';
-        @return $number;
+  $n: 1;
+  // $number must be a number
+  @if meta.type-of($number) != number {
+    @warn '#{ $number } is not a number.';
+    @return $number;
+  }
+  // $digits must be a unitless number
+  @if meta.type-of($digits) != number {
+    @warn '#{ $digits } is not a number.';
+    @return $number;
+  } @else if not math.is-unitless($digits) {
+    @warn '#{ $digits } has a unit.';
+    @return $number;
+  }
+  @if $digits > 0 {
+    @for $i from 1 through $digits {
+      $n: $n * 10;
     }
-    // $digits must be a unitless number
-    @if meta.type-of($digits) != number {
-        @warn '#{ $digits } is not a number.';
-        @return $number;
-    } @else if not math.is-unitless($digits) {
-        @warn '#{ $digits } has a unit.';
-        @return $number;
-    }
-    @if $digits > 0 {
-        @for $i from 1 through $digits {
-            $n: $n * 10;
-        }
-    }
-    @if $mode == round {
-        @return math.div(math.round($number * $n), $n);
-    } @else if $mode == ceil {
-        @return math.div(math.ceil($number * $n), $n);
-    } @else if $mode == floor {
-        @return math.div(math.floor($number * $n), $n);
-    } @else {
-        @warn '#{ $mode } is undefined keyword.';
-        @return $number;
-    }
+  }
+  @if $mode == round {
+    @return math.div(math.round($number * $n), $n);
+  } @else if $mode == ceil {
+    @return math.div(math.ceil($number * $n), $n);
+  } @else if $mode == floor {
+    @return math.div(math.floor($number * $n), $n);
+  } @else {
+    @warn '#{ $mode } is undefined keyword.';
+    @return $number;
+  }
 }
 
 // Ceil a number to specified digits.
@@ -63,7 +63,7 @@
 //     decimal-ceil(0.666, 2) => 0.67
 //
 @function decimal-ceil($number, $digits: 0) {
-    @return decimal-round($number, $digits, ceil);
+  @return decimal-round($number, $digits, ceil);
 }
 
 // Floor a number to specified digits.
@@ -80,5 +80,5 @@
 //     decimal-floor(0.666, 2) => 0.66
 //
 @function decimal-floor($number, $digits: 0) {
-    @return decimal-round($number, $digits, floor);
+  @return decimal-round($number, $digits, floor);
 }
