--- a/src/sass/tools/functions/_fixedGut.scss
+++ b/src/sass/tools/functions/_fixedGut.scss
@@ -3,7 +3,7 @@
 // returns size based on the specified amount of gutter.
 // uses the units you chose in config/global
 // **********************************************************
-@use '../../config/grid';
+@use "../../config/grid";
 
 @function fixedGut($gut) {
   @if $gut == 0 {
