--- a/src/sass/tools/mixins/_obj-fit-contain.scss
+++ b/src/sass/tools/mixins/_obj-fit-contain.scss
@@ -9,6 +9,6 @@
  */
 
 @mixin obj-fit-contain() {
-    object-fit: contain;
-    font-family: 'object-fit: contain';
+  object-fit: contain;
+  font-family: "object-fit: contain";
 }
