--- a/tests/sass/tools/functions/_color.scss
+++ b/tests/sass/tools/functions/_color.scss
@@ -1,4 +1,4 @@
-@use '../../../../src/sass/tools/functions/color' as *;
+@use "../../../../src/sass/tools/functions/color" as *;
 .color {
-    color: color(4);
+  color: color(4);
 }
