--- a/tests/sass/tools/functions/_fixedCol.scss
+++ b/tests/sass/tools/functions/_fixedCol.scss
@@ -1,4 +1,4 @@
-@use '../../../../src/sass/tools/functions/fixedCol' as *;
+@use "../../../../src/sass/tools/functions/fixedCol" as *;
 .fixedCol {
-    width: fixedCol(4);
+  width: fixedCol(4);
 }
