--- a/tests/sass/tools/functions/_fixedGut.scss
+++ b/tests/sass/tools/functions/_fixedGut.scss
@@ -1,4 +1,4 @@
-@use '../../../../src/sass/tools/functions/fixedGut' as *;
+@use "../../../../src/sass/tools/functions/fixedGut" as *;
 .fixedGut {
-    width: fixedGut(4);
+  width: fixedGut(4);
 }
