--- a/tests/sass/tools/functions/_font-size-unitless.scss
+++ b/tests/sass/tools/functions/_font-size-unitless.scss
@@ -1,5 +1,5 @@
-@use '../../../../src/sass/tools/functions/rem' as *;
-@use '../../../../src/sass/tools/functions/font-size-unitless' as *;
+@use "../../../../src/sass/tools/functions/rem" as *;
+@use "../../../../src/sass/tools/functions/font-size-unitless" as *;
 .font-size-unitless {
-    font-size: rem(font-size-unitless(m));
+  font-size: rem(font-size-unitless(m));
 }
