--- a/tests/sass/tools/mixins/_clickableTransparentBg.scss
+++ b/tests/sass/tools/mixins/_clickableTransparentBg.scss
@@ -1,4 +1,4 @@
-@use '../../../../src/sass/tools/mixins/clickableTransparentBg' as *;
+@use "../../../../src/sass/tools/mixins/clickableTransparentBg" as *;
 .clickableTransparentBg {
-    @include clickableTransparentBg();
+  @include clickableTransparentBg();
 }
