--- a/tests/sass/tools/mixins/_font.scss
+++ b/tests/sass/tools/mixins/_font.scss
@@ -1,4 +1,4 @@
-@use '../../../../src/sass/tools/mixins/font' as *;
+@use "../../../../src/sass/tools/mixins/font" as *;
 .font {
-    @include font(inter, regular);
+  @include font(inter, regular);
 }
