--- a/tests/sass/tools/mixins/_respVideoContainer.scss
+++ b/tests/sass/tools/mixins/_respVideoContainer.scss
@@ -1,5 +1,5 @@
-@use '../../../../src/sass/tools/mixins/respVideoContainer' as *;
+@use "../../../../src/sass/tools/mixins/respVideoContainer" as *;
 
 .respVideoContainer {
-    @include respVideoContainer(2, 12);
+  @include respVideoContainer(2, 12);
 }
