add mid function and tests

--- a/src/sass/tools/_tools.scss
+++ b/src/sass/tools/_tools.scss
@@ -10,6 +10,7 @@
 @forward "functions/font-size-unitless";
 @forward "functions/gutter";
 @forward "functions/map-deep-get";
+@forward "functions/mid";
 @forward "functions/px";
 @forward "functions/rem";
 @forward "functions/rmUnit";
