--- a/tests/sass/tools/_tools.scss
+++ b/tests/sass/tools/_tools.scss
@@ -9,6 +9,7 @@
 @use "functions/fixedGut";
 @use "functions/font-size-unitless";
 @use "functions/gutter";
+@use "functions/mid";
 @use "functions/px";
 @use "functions/rem";
 @use "functions/rmUnit";
