--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -2,7 +2,7 @@
 //  * whiteCube SCSS file       *
 //  * mixins and functions      *
 //  * ************************* *
-//
 
-@use "base/base";
+@use "config/config";
 @use "utils/utils";
+@use "base/base";
