--- a/src/sass/config/_breakpoints.scss
+++ b/src/sass/config/_breakpoints.scss
@@ -1,13 +1,16 @@
-@use "./global";
-$breakpoints: (
+@use "../lib/config" as *;
+
+// @if global.$env != "production" {
+//   $mq-show-breakpoints: (xs, s, m, l, xl) !default;
+// }
+
+$config: (
   xxl: 1800px,
   xl: 1200px,
   l: 920px,
   m: 760px,
   s: 640px,
   xs: 480px,
-) !default;
+);
 
-@if global.$env != "production" {
-  $mq-show-breakpoints: (xs, s, m, l, xl) !default;
-}
+@include merge-config("breakpoints", $config);
