--- a/src/sass/tools/functions/_fixedGut.scss
+++ b/src/sass/tools/functions/_fixedGut.scss
@@ -3,11 +3,11 @@
 // returns size based on the specified amount of gutter.
 // uses the units you chose in config/global
 // **********************************************************
-@use "../../config/grid";
+@use "../../lib/config" as *;
 
 @function fixedGut($gut) {
   @if $gut == 0 {
     @return 0;
   }
-  @return ($gut * grid.$gutter_size);
+  @return ($gut * config("grid.gutter_size"));
 }
