--- a/src/sass/tools/functions/_mid.scss
+++ b/src/sass/tools/functions/_mid.scss
@@ -4,13 +4,13 @@
 // Only use it for the text for now.
 // **********************************************************
 
-@use "../../config/grid";
+@use "../../lib/config" as *;
 @use "rem" as *;
 
 @function mid($min, $max) {
   @return clamp(
     rem($min),
-    calc(($min / 320 * 100 - $max / grid.$width * 100) * 1vw),
+    calc(($min / 320 * 100 - $max / config("grid.width") * 100) * 1vw),
     rem($max)
   );
 }
