--- a/src/stubs/sass/config/_grid.scss
+++ b/src/stubs/sass/config/_grid.scss
@@ -1,6 +1,9 @@
-// @use '@whitecube/white-sass/config/grid' with (
-//     $unit: 1em, //    Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
-//     $columns: 12, //    Number of columns you want in the grid
-//     $width: 1800, //    Base grid-size (without units but based on pixels)
-//     $gutter_size: 24, //    Base gutter-size (without units but based on pixels)
+// @use '@whitecube/white-sass/tools';
+// $config:  (
+//     unit: 1em, //  Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
+//     columns: 14, //  Number of columns you want in the grid
+//     width: 1200, //  Base grid-size (without units but based on pixels)
+//     gutter_size: 24, //  Base gutter-size (without units but based on pixels)
 // );
+
+// @include merge-config('grid', $config);
