--- a/tests/sass/tools/mixins/_import-fonts.scss
+++ b/tests/sass/tools/mixins/_import-fonts.scss
@@ -5,6 +5,7 @@
 // **********************************************************
 @use "track-fonts";
 @use "../../config/fonts";
+@use "../../config/fonts";
 @use "../functions/map-deep-get" as *;
 @use "../mixins/font-face" as *;
 
