--- a/src/sass/config/_grid.scss
+++ b/src/sass/config/_grid.scss
@@ -1,5 +1,12 @@
-// GRIDZ
-$unit: 1em !default; //    Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
-$columns: 14 !default; //    Number of columns you want in the grid
-$width: 1800 !default; //    Base grid-size (without units but based on pixels)
-$gutter_size: 24 !default; //    Base gutter-size (without units but based on pixels)
+@use "../lib/config" as *;
+$config: (
+  unit: 1em,
+  //  Unit used in the gridz-system. Possible values : 1px, 1em, 1rem, 1banana (all available css units except '%')
+  columns: 14,
+  //  Number of columns you want in the grid
+  width: 1200,
+  //  Base grid-size (without units but based on pixels)
+  gutter_size: 24, //  Base gutter-size (without units but based on pixels)
+);
+
+@include merge-config("grid", $config);
