--- a/src/sass/config/_typography.scss
+++ b/src/sass/config/_typography.scss
@@ -2,23 +2,29 @@
 *   All typography related variables.
 */
 
-$base-font-size: 16 !default;
-$font-sizes: (
-  xl11: 200,
-  xl10: 130,
-  xl9: 120,
-  xl8: 110,
-  xl7: 105,
-  xl6: 65,
-  xl5: 44,
-  xl4: 34,
-  xl3: 27,
-  xl2: 24,
-  xl: 21,
-  l: 17,
-  m: 16,
-  s: 14,
-  xs: 13,
-  xs2: 10,
-  xs3: 9,
-) !default;
+@use "../lib/config" as *;
+
+$config: (
+  base-font-size: 16,
+  font-sizes: (
+    xl11: 200,
+    xl10: 130,
+    xl9: 120,
+    xl8: 110,
+    xl7: 105,
+    xl6: 65,
+    xl5: 44,
+    xl4: 34,
+    xl3: 27,
+    xl2: 24,
+    xl: 21,
+    l: 17,
+    m: 16,
+    s: 14,
+    xs: 13,
+    xs2: 10,
+    xs3: 9,
+  ),
+);
+
+@include merge-config("typography", $config);
