--- a/src/sass/tools/mixins/_import-fonts.scss
+++ b/src/sass/tools/mixins/_import-fonts.scss
@@ -4,11 +4,11 @@
 // fonts in current porject state
 // **********************************************************
 @use "track-fonts";
-@use "../../config/fonts";
-@use "../functions/map-deep-get" as *;
+@use "../../lib/config" as *;
 @use "../mixins/font-face" as *;
+@use "../functions/map-deep-get" as *;
 
-@mixin import-fonts($font-stack: fonts.$fonts-stack) {
+@mixin import-fonts($font-stack: config("fonts.fonts-stack")) {
   @each $group, $variations in track-fonts.$used-fonts {
     @each $variant in $variations {
       $font-properties: map-deep-get(fonts.$fonts-stack, $group, $variant);
